# labkit-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.html  README.md  install.sh  lab-kit  labkit  pyproject.toml  setup.py
.github/workflows/: ci.yml
lab_kit/: __init__.py  claude.py  cli.py  codex.py  metadata.py  models.py  refresh.py  self_update.py  ui.py  utils.py
lab_kit/data/: claude_feature_metadata.json  codex_feature_metadata.json
scripts/: render_readme.py
tests/: run_e2e.sh
tests/e2e/: test_lab_kit.py  test_live_smoke.py
