[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labkit-cli"
dynamic = ["version"]
description = "Safety-first CLI for managing Codex CLI and Claude Code experimental controls."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "jethros-projects" }]
keywords = ["codex", "claude-code", "cli", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "mypy>=1.8",
  "ruff>=0.5",
]

[project.scripts]
labkit = "lab_kit.cli:main"

[project.urls]
Homepage = "https://github.com/jethros-projects/labkit-cli"
Repository = "https://github.com/jethros-projects/labkit-cli"
Issues = "https://github.com/jethros-projects/labkit-cli/issues"

[tool.setuptools]
packages = ["lab_kit"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "lab_kit.__version__" }

[tool.setuptools.package-data]
lab_kit = ["data/*.json"]

[tool.black]
line-length = 140
target-version = ["py39"]

[tool.ruff]
line-length = 140
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E731"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["lab_kit.cli", "lab_kit.codex", "lab_kit.claude"]
ignore_errors = true
